# chrismiller.xyz

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  allowlist.txt  docker-compose.yml  flake.nix  package.json  postcss.config.js  rustfmt.toml  shell.nix  snowpack.config.mjs  tailwind.config.js  webpack.common.js
migrations/2023-05-05-151437_create_blog_posts/: up.sql
public/: index.html
public/layouts/: global.pug  navlink.pug
public/pages/: blog.pug  index.pug  tech.pug
src/: App.tsx  image.d.ts  index.tsx  lib.ts  main.rs  schema.rs  tags.tsx
src/blog/: api.tsx  entry.tsx  index.tsx  post.ts  post.tsx
src/components/: Nav.tsx
src/controllers/: index.rs  mod.rs  posts.rs
src/home/: index.tsx
src/lib/: pages.ts
src/models/: mod.rs  posts.rs
src/pages/: Home.tsx
src/styles/: index.scss
src/tech/: card.tsx  index.tsx  lib.ts  tags.tsx
src/utils/: mod.rs
src/views/: blog_post.rs  index.rs  mod.rs  posts.rs
styles/: main.css
