[package]
name = "chrismiller-xyz"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
axum-macros = "0.3"
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
markup = "0.13"